fix(rend/notifs): Widen notifications column width
not to show a horizontal scroll bar.

--- a/renderer/components/Notifications/styles.scss
+++ b/renderer/components/Notifications/styles.scss
@@ -53,7 +53,7 @@
     border-left: 1px solid rgba(10, 10, 10, 0.1);
     border-right: 1px solid rgba(10, 10, 10, 0.1);
     font-size: 13px;
-    min-width: 230px;
+    min-width: 234px;
     overflow: auto;
   }
 
